Added Jekyll support

--- a/index.html
+++ b/index.html
@@ -1,53 +1,4 @@
-<html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>Enquête</title>
-		<link rel="stylesheet" href="style.css" />
-		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
-		<!-- Tag-it -->
-		<link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
-    	<link href="css/tagit.ui-zendesk.css" rel="stylesheet" type="text/css">
-   	 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-   		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/tag-it.js" type="text/javascript" charset="utf-8"></script>
-
-
-	</head>
-	<body>
-		<div id="enquete">
-			<div id="enquete-content">
-
-			</div>
-		</div>
-		<ol id="new-projects"></ol>
-
-	<script>
-	$(document).ready(function(){
-	var progress=1;
-	$( "#enquete-content" ).load( "enquete-content.html #enquete-content-"+progress+"" );
-	progress++;
-	$("body").on('click', '#click-next', function(){
-		$('#enquete-content').fadeOut('slow', function(){
-    		$('#enquete-content').load("enquete-content.html #enquete-content-"+progress+"", function(){
-        		$('#enquete-content').fadeIn('slow');
-			if(progress==1){ progress=2;} else{progress=1;}
-   			});
-   			$.getScript('fieldscript.js');
-		});
-	});
-	$("body").on("submit", "#form", function(){
-		$.ajax({
-                url: "post.php", // Le nom du fichier indiqué dans le formulaire
-                type: "post", // La méthode indiquée dans le formulaire (get ou post)
-                data: "emotions-values="+$("#emotions-values").val(), // Je sérialise les données (j'envoie toutes les valeurs présentes dans le formulaire)
-                success: function(html) { // Je récupère la réponse du fichier PHP
-                    alert(html); // J'affiche cette réponse
-                }
-            });
-            return false;
-	});
-	});
-	</script>
-	</body>
-</html>
+---
+layout: default
+title: Accueil
+---
