--- a/survey-content.html
+++ b/survey-content.html
@@ -1,10 +1,10 @@
-<div id="enquete-content-1">
+<div id="survey-content-1">
 	<h1>Enquête</h1>
 	<p>Veuillez répondre aux questions suivantes en suivant l'ordre de passage de la file d'attente.</p>
 	<button name="next" id="click-next">Suivant</button>
 </div>
 
-<div id="enquete-content-2">
+<div id="survey-content-2">
 	<h1>Enquête 2</h1>
 	<p>Veuillez répondre aux questions suivantes en suivant l'ordre de passage de la file d'attente. 2</p>
     <form id="form" action="">
@@ -12,5 +12,5 @@
     	<ul id="emotions-field"></ul>
     	<input type="submit" value="Envoyer" />
     </form>
-	
+
 </div>
