Communication with heroku PHP App works

--- a/survey-content.html
+++ b/survey-content.html
@@ -8,9 +8,8 @@
 	<h1>Enquête 2</h1>
 	<p>Veuillez répondre aux questions suivantes en suivant l'ordre de passage de la file d'attente. 2</p>
     <form id="form" action="">
-    	<input name="tags" id="emotions-values" value="" type="hidden"> <!-- only disabled for demonstration purposes -->
+    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
     	<ul id="emotions-field"></ul>
     	<input type="submit" value="Envoyer" />
     </form>
-
 </div>
