--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="javascript/tag-it.js" type="text/javascript" charset="utf-8"></script>
 
+		<!-- Cross-Origin -->
+		<script type="text/javascript" src="javascript/jquery.ajax-cross-origin.min.js"></script>
+
 
 	</head>
 	<body>
@@ -37,14 +40,19 @@
 	});
 	$("body").on("submit", "#form", function(){
 		$.ajax({
-                url: "post.php", // Le nom du fichier indiqué dans le formulaire
-                type: "post", // La méthode indiquée dans le formulaire (get ou post)
-                data: "emotions-values="+$("#emotions-values").val(), // Je sérialise les données (j'envoie toutes les valeurs présentes dans le formulaire)
-                success: function(html) { // Je récupère la réponse du fichier PHP
-                    alert(html); // J'affiche cette réponse
-                }
-            });
-            return false;
+						type: 'POST',
+				    url: 'http://music-emotions-survey-php.herokuapp.com/post.php',
+				    crossDomain: true,
+				    data: "emotions-values="+$("#emotions-values").val(),
+				    dataType: 'json',
+				    success: function(responseData, textStatus, jqXHR) {
+								alert("OK:"+responseData.values);
+				    },
+				    error: function (responseData, textStatus, errorThrown) {
+				        alert('POST failed.');
+				    }
+					});
+					return false;
 	});
 	});
 	</script>
