--- a/survey-content.html
+++ b/survey-content.html
@@ -1,15 +1,15 @@
 <div id="survey-content-1">
-	<h1>Enquête</h1>
-	<p>Veuillez répondre aux questions suivantes en suivant l'ordre de passage de la file d'attente.</p>
-	<button name="next" id="click-next">Suivant</button>
+	<h1>Survey 1</h1>
+	<p>Introduction</p>
+	<button name="next" id="click-next">Next</button>
 </div>
 
 <div id="survey-content-2">
-	<h1>Enquête 2</h1>
-	<p>Veuillez répondre aux questions suivantes en suivant l'ordre de passage de la file d'attente. 2</p>
+	<h1>Survey 2</h1>
+	<p>Enter some emotions :</p>
     <form id="form" action="">
     	<input name="emotions-values" id="emotions-values" value="" type="hidden">
     	<ul id="emotions-field"></ul>
-    	<input type="submit" value="Envoyer" />
+    	<input type="submit" value="Next" />
     </form>
 </div>
