--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>Enquête</title>
+		<title>Music Emotions Survey</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -18,6 +18,9 @@
 
 	</head>
 	<body>
+		<!--Div to appear upon dimmed DIV-->
+		<img id="loading" src="images/ajax-loader.gif" alt="Loading..." height="20" width="20">
+
 		<div id="survey">
 			<div id="survey-content">
 
@@ -38,6 +41,13 @@
    			$.getScript('javascript/fieldscript.js');
 		});
 	});
+	$(document)
+  .ajaxStart(function () {
+		$("#loading").css("opacity",1).fadeIn(150);
+  })
+  .ajaxStop(function () {
+		$("#loading").fadeOut(150);
+  });
 	$("body").on("submit", "#form", function(){
 		$.ajax({
 						type: 'POST',
