--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<!-- Cross-Origin -->
 		<script type="text/javascript" src="javascript/jquery.ajax-cross-origin.min.js"></script>
 
-
+		<!-- Ubuntu font -->
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		
 	</head>
 	<body>
 		<!--Div to appear upon dimmed DIV-->
