--- a/survey-content.html
+++ b/survey-content.html
@@ -1,13 +1,17 @@
 <div id="survey-content-1">
-	<h1>Survey 1</h1>
+	<h1>Bonjour et bievenue!</h1>
 	<p>Introduction</p>
+
 	<button name="next" id="click-next">Next</button>
 </div>
 
 <div id="survey-content-2">
-	<h1>Survey 2</h1>
-	<p>Enter some emotions :</p>
+	<h1>1<sup>er</sup> Extrait</h1>
+	<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><br /><br />
+
     <form id="form" action="">
+			<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
+			<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
     	<input name="emotions-values" id="emotions-values" value="" type="hidden">
     	<ul id="emotions-field"></ul>
     	<input type="submit" value="Next" />
