--- a/survey-content.html
+++ b/survey-content.html
@@ -6,7 +6,34 @@
 </div>
 
 <div id="survey-content-2">
-	<h1>1<sup>er</sup> Extrait</h1>
+	<h1 id="extract-number">Extrait 1</h1>
+	<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><br /><br />
+
+    <form id="form" action="">
+			<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
+			<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
+    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
+    	<ul id="emotions-field"></ul>
+    	<input type="submit" value="Next" />
+    </form>
+</div>
+
+<div id="survey-content-3">
+	<h1 id="extract-number">Extrait 2</h1>
+	<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><br /><br />
+
+    <form id="form" action="">
+			<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
+			<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
+    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
+    	<ul id="emotions-field"></ul>
+    	<input type="submit" value="Next" />
+    </form>
+</div>
+
+
+<div id="survey-content-4">
+	<h1 id="extract-number">Extrait 3</h1>
 	<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><br /><br />
 
     <form id="form" action="">
