--- a/index.html
+++ b/index.html
@@ -20,16 +20,169 @@
 
 	</head>
 	<body>
-		<!--Div to appear upon dimmed DIV-->
+		<!-- Loading gif -->
 		<img id="loading" src="images/ajax-loader.gif" alt="Loading..." height="20" width="20">
 
 		<div id="survey">
 				<progress id="progress-bar" value="0" max="10"></progress>
 			<div id="survey-content">
 
+				<!-- DIV INTRO -->
+				<div id="survey-content-intro">
+					<h1>Bonjour et bievenue!</h1>
+					<p>Introduction</p>
+
+					<button name="next" id="click-next">Next</button>
+				</div>
+
+				<!-- DIV SURVEY -->
+				<div id="survey-content-music">
+					<h1 id="extract-number">Extrait X</h1>
+					<audio id="music_player" type="audio/mp3" controls="controls"></audio><br /><i>Error? <a href="javascript:void(0)" id="refreshAudio">Refresh</a></i><br /><br /><br />
+
+				    <form id="form" action="">
+							<input name="known" id="known" type="checkbox" /><label for="known"><i>Je connaissais déjà cet extrait</i></label><br />
+							<p>Veuillez entrer les émotions que cet extrait vous fait ressentir :</p>
+				    	<input name="emotions-values" id="emotions-values" value="" type="hidden">
+				    	<ul id="emotions-field"></ul>
+				    	<input type="submit" value="Next" />
+				    </form>
+				</div>
+
+				<!-- DIV END -->
+				<div id="survey-content-end">
+					<h1>Thank you</h1>
+					<p>END</p>
+				</div>
+
 			</div>
 		</div>
 
+		<script>
+		$(document).ready(function(){
+			//Hide other divs
+			$("#survey-content-music").hide();
+			$("#survey-content-end").hide();
+
+			//Progress var for progress bar
+			var progress=1;
+
+			//Music list and shuffled list.
+			var list_music=['asdg_ftsombaf','b_s2','c_xy','cc_o','css_dm','dl_ritd','ee_pac','gd_sj','gg_rib','jc_gs','jc_oos','jsb_ags','jt_cstf','jw_oa','lb_s72','m_ctk','m_ste','mo_tb','rw_ms','s_b','tc_ms','tdbq_bralt','wam_ps141'];
+			var music=shuffle(list_music);
+
+			//Refresh Audio link
+			$("#refreshAudio").click(function(){
+				$("#music_player").prop("src", "music/"+music[progress-2]+".mp3");
+			});
+
+
+			//Tag-It field
+			var sampleTagsFrench = ['Joie', 'Colère', 'Haine', 'Rage', 'Tristesse', 'Peur', 'Tranquillité', 'Soulagement', 'Interrogation', 'Angoisse', 'Peine', 'Dégoût', 'Stress', 'Frustration', 'Tension', 'Dérangement', 'Fureur', 'Exaspération', 'Affolement',
+			'Excitation', 'Alerte', 'Confusion', 'Réticence', 'Désarroi', 'Détresse', 'Déprime', 'Effroi', 'Épouvante', 'Désespoir', 'Méfiance', 'Ennui', 'Perplexité', 'Épuisement', 'Résignation' ,'Perturbation', 'Impuissance', 'Solitude', 'Pression', 'Souffrance',
+			'Gêne', 'Lassitude', 'Surprise', 'Terreur', 'Calme'];
+
+			$('#emotions-field').tagit({
+			availableTags: sampleTagsFrench,
+			// This will make Tag-it submit a single form value, as a comma-delimited field.
+			singleField: true,
+			singleFieldNode: $('#emotions-values')
+			});
+
+			//Ajax Loading
+			$(document)
+		  .ajaxStart(function () {
+				$("#loading").css("opacity",1).fadeIn(150);
+		  })
+		  .ajaxStop(function () {
+				$("#loading").fadeOut(150);
+		  });
+
+			// Prepare Content Music
+			$("#click-next").click(function(){
+				progress++;
+				$('#survey-content-intro').fadeOut('slow', function(){
+					//Text Extract
+					$('#extract-number').text("Extrait "+(progress-1));
+
+					//Prepare Music
+					$("#music_player").prop("src", "music/"+music[progress-2]+".mp3");
+
+		    	$('#survey-content-music').fadeIn('slow', function(){
+						$("#progress-bar").prop("value", progress-1);
+					});
+				});
+			});
+
+			//On submit survey
+			$("#form").submit(function(event){
+				//POST AJAX
+				$.ajax({
+					type: 'POST',
+					//url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
+					url: 'http://localhost:8888/Other/enquete-php/post.php',
+					crossDomain: true,
+					data: "emotions-values="+$("#emotions-values").val()+"&known="+$("#known").is(":checked"),
+					dataType: 'json',
+					success: function(responseData, textStatus, jqXHR) {
+						//If Music left: Recreate page with new Music
+						if(progress<10){
+							progress++;
+							$('#survey-content-music').fadeOut('slow', function(){
+								//Text Extract
+								$('#extract-number').text("Extrait "+(progress-1));
+
+								//Prepare Music
+								$("#music_player").prop("src", "music/"+music[progress-2]+".mp3");
+
+								//Erase data of previous page
+								$("#known").prop("checked", false);
+								$("#emotions-field").tagit('removeAll');
+
+					    	$('#survey-content-music').fadeIn('slow', function(){
+									$("#progress-bar").prop("value", progress-1);
+								});
+							});
+						} //Else: Show End Page
+						else {
+							progress++;
+							$('#survey-content-music').fadeOut('slow', function(){
+					    	$('#survey-content-end').fadeIn('slow', function(){
+									$("#progress-bar").prop("value", progress-1);
+								});
+							});
+						}
+					},
+					error: function (responseData, textStatus, errorThrown) {
+  					alert('POST failed. Please retry.');
+					}
+				});
+				event.preventDefault();
+			});
+
+
+		});
+
+		function shuffle(array) {
+			var currentIndex = array.length, temporaryValue, randomIndex;
+
+			// While there remain elements to shuffle...
+			while (0 !== currentIndex) {
+
+				// Pick a remaining element...
+				randomIndex = Math.floor(Math.random() * currentIndex);
+				currentIndex -= 1;
+
+				// And swap it with the current element.
+				temporaryValue = array[currentIndex];
+				array[currentIndex] = array[randomIndex];
+				array[randomIndex] = temporaryValue;
+			}
+
+			return array;
+		}
+		</script>
+<!-- RENEW
 	<script>
 	$(document).ready(function(){
 	var progress=1;
@@ -91,7 +244,7 @@
 					return false;
 	});
 
-	});
-	</script>
+});
+	</script>-->
 	</body>
 </html>
