--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
 				<!-- DIV INTRO -->
 				<div id="survey-content-intro">
 					<h1>Bonjour et bievenue!</h1>
-					<p>Introduction</p>
+					<p>Cette enquête a pour but de tenter de trouver un lien entre les propriété théoriques d'une musique et les émotions qu'elle procure.
+						<br />Durant ce sondage, vous allez être invité à écouter 8 extraits de musiques de différents styles pour ensuite indiquer le plus grand nombre possible de <i>mots-clés</i> qui décrivent les émotions que vous avez ressenties à l'écoute de cet extrait.
+						<br />Vos réponses sont ensuites stockées dans une base de données puis mise à disposition libre (après avoir été anonymisées).
+						<br />Le nom des musiques que vous entendrez ainsi que le lien vers la vidéo de laquelle provient l'extrait vous seront indiqués à la fin de l'enquête.
+						<br /><i>Pour plus d'informations, <a href="https://www.github.com/lancelotbla/music-emotions-survey/">cliquez ici.</a></i>
+						<br/><br/><b>Pour commencer, veuillez renseigner votre nom et cliquer sur "Suivant"</b></p>
 
-					<button name="next" id="click-next">Next</button>
+						<form id="form-intro" action="">
+							<label for="name">Nom : </label><input type="text" name="name" id="name" required />
+							<br/><br />
+							<input type="submit" value="Suivant" />
+						</form>
 				</div>
 
 				<!-- DIV SURVEY -->
@@ -68,6 +77,9 @@
 
 			//Progress var for progress bar
 			var progress=1;
+
+			//Initialize Name var
+			var name="";
 
 			//Music list and shuffled list.
 			var list_music=['asdg_ftsombaf','b_s2','c_xy','cc_o','css_dm','dl_ritd','ee_pac1','gd_sj','gg_rib','jc_gs','jc_oos','jsb_ags','jt_cstf','jw_oa','lvb_s72','m_ctk','m_ste','mo_tb','rw_ms','s_b','tc_ms','tdbq_bralt','wam_ps141'];
@@ -115,65 +127,91 @@
 				$("#loading").fadeOut(150);
 		  });
 
-			// Prepare Content Music
-			$("#click-next").click(function(){
-				progress++;
-				$('#survey-content-intro').fadeOut('slow', function(){
-					//Text Extract
-					$('#extract-number').text("Extrait "+(progress-1)+"/8");
-
-					//Prepare Music
-					$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
-
-		    	$('#survey-content-music').fadeIn('slow', function(){
-						$("#progress-bar").prop("value", progress-1);
-					});
-				});
-			});
-
-			//On submit survey
-			$("#form").submit(function(event){
-				//POST AJAX
-				$.ajax({
-					type: 'POST',
-					url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
-					//If local: url: 'http://localhost:8888/Other/enquete-php/post.php',
-					crossDomain: true,
-					data: "emotions-values="+$("#emotions-values").val()+"&known="+$("#known").is(":checked"),
-					dataType: 'json',
-					success: function(responseData, textStatus, jqXHR) {
-						//If Music left: Recreate page with new Music
-						if(progress<9){
+			//On submit Intro Form
+			$("#form-intro").submit(function(event){
+				//Verify if field is filled
+				if(!$("#name").val()){
+					alert("Please fill the field");
+				} else{
+					//POST AJAX
+					$.ajax({
+						type: 'POST',
+						//url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
+						url: 'http://localhost:8888/Other/enquete-php/post.php',
+						crossDomain: true,
+						data: "name="+$("#name").val(),
+						dataType: 'json',
+						success: function(responseData, textStatus, jqXHR) {
+							name=$("#name").val();
 							progress++;
-							$('#survey-content-music').fadeOut('slow', function(){
+							$('#survey-content-intro').fadeOut('slow', function(){
 								//Text Extract
 								$('#extract-number').text("Extrait "+(progress-1)+"/8");
 
 								//Prepare Music
 								$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
 
-								//Erase data of previous page
-								$("#known").prop("checked", false);
-								$("#emotions-field").tagit('removeAll');
-
 					    	$('#survey-content-music').fadeIn('slow', function(){
 									$("#progress-bar").prop("value", progress-1);
 								});
 							});
-						} //Else: Show End Page
-						else {
-							progress++;
-							$('#survey-content-music').fadeOut('slow', function(){
-					    	$('#survey-content-end').fadeIn('slow', function(){
-									$("#progress-bar").prop("value", progress-1);
-								});
-							});
+						},
+						error: function (responseData, textStatus, errorThrown) {
+	  					alert('POST failed. Please retry.');
 						}
-					},
-					error: function (responseData, textStatus, errorThrown) {
-  					alert('POST failed. Please retry.');
-					}
-				});
+					});
+				}
+				event.preventDefault();
+			});
+
+			//On submit survey
+			$("#form").submit(function(event){
+				//Verify if field is filled
+				if(!$("#emotions-values").val()){
+					alert("Please fill the field");
+				} else{
+					//POST AJAX
+					$.ajax({
+						type: 'POST',
+						//url: 'https://music-emotions-survey-php.herokuapp.com/post.php',
+						url: 'http://localhost:8888/Other/enquete-php/post.php',
+						crossDomain: true,
+						data: "emotions-values="+$("#emotions-values").val()+"&known="+$("#known").is(":checked"),
+						dataType: 'json',
+						success: function(responseData, textStatus, jqXHR) {
+							//If Music left: Recreate page with new Music
+							if(progress<9){
+								progress++;
+								$('#survey-content-music').fadeOut('slow', function(){
+									//Text Extract
+									$('#extract-number').text("Extrait "+(progress-1)+"/8");
+
+									//Prepare Music
+									$("#music_player").prop("src", "music/"+music[progress-2].id+".mp3");
+
+									//Erase data of previous page
+									$("#known").prop("checked", false);
+									$("#emotions-field").tagit('removeAll');
+
+						    	$('#survey-content-music').fadeIn('slow', function(){
+										$("#progress-bar").prop("value", progress-1);
+									});
+								});
+							} //Else: Show End Page
+							else {
+								progress++;
+								$('#survey-content-music').fadeOut('slow', function(){
+						    	$('#survey-content-end').fadeIn('slow', function(){
+										$("#progress-bar").prop("value", progress-1);
+									});
+								});
+							}
+						},
+						error: function (responseData, textStatus, errorThrown) {
+	  					alert('POST failed. Please retry.');
+						}
+					});
+				}
 				event.preventDefault();
 			});
 
