Updated for server

--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
 							});
 						},
 						error: function (responseData, textStatus, errorThrown) {
-	  					//alert('POST failed. Please retry.');
-							//DEBUG:
-							alert('Error: '+textStatus+' and '+errorThrown);
+	  					alert('POST failed. Please retry.');
 						}
 					});
 				}
@@ -210,9 +208,7 @@
 							}
 						},
 						error: function (responseData, textStatus, errorThrown) {
-	  					//alert('POST failed. Please retry.');
-							//DEBUG:
-							alert('Error: '+textStatus+' and '+errorThrown);
+	  					alert('POST failed. Please retry.');
 						}
 					});
 				}
