--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!-- Tag-it -->
 		<link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
     	<link href="css/tagit.ui-zendesk.css" rel="stylesheet" type="text/css">
-   	 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+   	 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
    		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="javascript/tag-it.js" type="text/javascript" charset="utf-8"></script>
 
