--- a/index.html
+++ b/index.html
@@ -253,8 +253,10 @@
 							list_displayed=true;
 						}
 					});
-				} else { // Do nothing }
+				} else { // Do nothing
+				}
 			});
+		});
 
 		function shuffle(array) {
 			var currentIndex = array.length, temporaryValue, randomIndex;
